--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,8 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  color: #ccc;
+  background-color: #1a1a1a;
 }
 
 * {
@@ -13,7 +15,7 @@ body {
 }
 
 a {
-  color: #0070f3;
+  color: #006eff;
   text-decoration: none;
 }
 
@@ -24,4 +26,5 @@ a:hover {
 img {
   max-width: 100%;
   display: block;
+  margin: 0 auto;
 }
